[gd_scene load_steps=18 format=3 uid="uid://bda8ej5u2fy4f"]

[ext_resource type="Script" path="res://grid-movement/pieces/piece.gd" id="2_7kry7"]
[ext_resource type="Texture2D" uid="uid://cjrfsijb1c4q3" path="res://grid-movement/art/piece-shadow.png" id="3_032yr"]
[ext_resource type="Texture2D" uid="uid://bh33dh1fhiaal" path="res://grid-movement/art/light_piece.png" id="3_cm1ce"]
[ext_resource type="AudioStream" uid="uid://d0ydx6rhmpw73" path="res://grid-movement/audio/capture.wav" id="4_dimeq"]
[ext_resource type="AudioStream" uid="uid://ctcwrkff0jb2u" path="res://grid-movement/audio/piece_move1.wav" id="4_wpqv6"]
[ext_resource type="AudioStream" uid="uid://bkphanog4p86j" path="res://grid-movement/audio/piece_move2.wav" id="5_8iaxw"]
[ext_resource type="AudioStream" uid="uid://pjw06dnqcisg" path="res://grid-movement/audio/piece_move3.wav" id="6_1a3m0"]
[ext_resource type="AudioStream" uid="uid://6inxijadmyj2" path="res://grid-movement/audio/piece_move4.wav" id="7_a0dkx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e4vgu"]
radius = 24.0
height = 48.0

[sub_resource type="Animation" id="Animation_a6mgu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 0.9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D/CollisionShape2D:shape:radius")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [24.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Area2D/CollisionShape2D:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [48.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Area2D/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../GPUParticles2D:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../Shadow:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ea36v"]
resource_name = "captured"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Shadow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, -1), Vector2(2, 0), Vector2(0, -2), Vector2(1, 1), Vector2(-1, -1), Vector2(2, 0), Vector2(0, -2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_rjjxs"]
resource_name = "raise"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(0.7, 0.7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.627511, 0.913394, 0.605995, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D/CollisionShape2D:shape:radius")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24.0, 24.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Area2D/CollisionShape2D:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [48.0, 63.3333]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Area2D/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6.66667)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="Animation" id="Animation_hf7mb"]
resource_name = "capture"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.166667, 0.2, 0.4),
"transitions": PackedFloat32Array(2, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.3, 1.3), Vector2(1.3, 1.3), Vector2(1.1, 1.1), Vector2(1.1, 1.1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.166667, 0.2, 0.4),
"transitions": PackedFloat32Array(2, 1, 1, 1, 1, 2),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, -25), Vector2(0, -25), Vector2(0, -3), Vector2(0, -3), Vector2(0, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.166667, 0.2, 0.4),
"transitions": PackedFloat32Array(2, 1, 1, 1, 1, 2),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(0.6, 0.6), Vector2(0.6, 0.6), Vector2(0.9, 0.9), Vector2(0.9, 0.9), Vector2(0.7, 0.7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.166667, 0.2, 0.4),
"transitions": PackedFloat32Array(2, 1, 1, 1, 1, 2),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 10), Vector2(0, 10), Vector2(0, 0), Vector2(0, 0), Vector2(0, 8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.166667, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.627511, 0.913394, 0.605995, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D/CollisionShape2D:shape:radius")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [24.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Area2D/CollisionShape2D:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [63.3333]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Area2D/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 6.66667)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ikkac"]
_data = {
"RESET": SubResource("Animation_a6mgu"),
"captured": SubResource("Animation_ea36v"),
"raise": SubResource("Animation_rjjxs"),
"slam": SubResource("Animation_hf7mb")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nkb4n"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.0
angle_min = -90.0
angle_max = 90.0
spread = 100.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 8.0
color = Color(1, 0, 0, 1)
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uxph6"]
streams_count = 1
stream_0/stream = ExtResource("4_dimeq")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tkrii"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("4_wpqv6")
stream_1/stream = ExtResource("5_8iaxw")
stream_2/stream = ExtResource("6_1a3m0")
stream_3/stream = ExtResource("7_a0dkx")

[node name="GamePiece" type="Node2D"]
script = ExtResource("2_7kry7")

[node name="Shadow" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_032yr")

[node name="PieceSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_cm1ce")
region_rect = Rect2(64, 0, 64, 64)

[node name="Area2D" type="Area2D" parent="PieceSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PieceSprite/Area2D"]
shape = SubResource("CapsuleShape2D_e4vgu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PieceSprite"]
libraries = {
"": SubResource("AnimationLibrary_ikkac")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_nkb4n")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="CaptureSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_uxph6")

[node name="PieceSounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_tkrii")

[connection signal="input_event" from="PieceSprite/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="PieceSprite/Area2D" to="PieceSprite" method="_on_area_2d_input_event"]
